--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
 <body ng-app="App">
     <div class="container" ng-controller="MatchCtrl" ng-cloak>
         <div class="jumbotron" ng-controller="JumboCtrl">
-          <i class="flag-ned pull-left"></i>
-          <i class="flag-alg"></i>
+          <i class="flag-alg pull-left"></i>
           <i class="flag-arg"></i>
           <i class="flag-aus"></i>
           <i class="flag-bel"></i>
