--- a/index.html
+++ b/index.html
@@ -53,44 +53,44 @@
 <body ng-app="App">
     <div class="container" ng-controller="MatchCtrl" ng-cloak>
         <div class="jumbotron" ng-controller="JumboCtrl">
-          <i class="flag-alg pull-left"></i>
-          <i class="flag-arg"></i>
-          <i class="flag-aus"></i>
-          <i class="flag-bel"></i>
-          <i class="flag-bih"></i>
-          <i class="flag-bra"></i>
-          <i class="flag-chi"></i>
-          <i class="flag-civ"></i>
-          <i class="flag-cmr"></i>
-          <i class="flag-col"></i>
-          <i class="flag-crc"></i>
-          <i class="flag-cro"></i>
-          <i class="flag-ecu"></i>
-          <i class="flag-eng"></i>
-          <i class="flag-esp"></i>
-          <i class="flag-fra"></i>
-          <i class="flag-ger"></i>
-          <i class="flag-gha"></i>
-          <i class="flag-gre"></i>
-          <i class="flag-hon"></i>
-          <i class="flag-irn"></i>
-          <i class="flag-ita"></i>
-          <i class="flag-jpn"></i>
-          <i class="flag-kor"></i>
-          <i class="flag-mex"></i>
-          <i class="flag-ned"></i>
-          <i class="flag-nga"></i>
-          <i class="flag-por"></i>
-          <i class="flag-rus"></i>
-          <i class="flag-sui"></i>
-          <i class="flag-uru"></i>
-          <i class="flag-usa"></i>
-          <div class="clearfix"></div>
+            <i class="flag-alg pull-left"></i>
+            <i class="flag-arg"></i>
+            <i class="flag-aus"></i>
+            <i class="flag-bel"></i>
+            <i class="flag-bih"></i>
+            <i class="flag-bra"></i>
+            <i class="flag-chi"></i>
+            <i class="flag-civ"></i>
+            <i class="flag-cmr"></i>
+            <i class="flag-col"></i>
+            <i class="flag-crc"></i>
+            <i class="flag-cro"></i>
+            <i class="flag-ecu"></i>
+            <i class="flag-eng"></i>
+            <i class="flag-esp"></i>
+            <i class="flag-fra"></i>
+            <i class="flag-ger"></i>
+            <i class="flag-gha"></i>
+            <i class="flag-gre"></i>
+            <i class="flag-hon"></i>
+            <i class="flag-irn"></i>
+            <i class="flag-ita"></i>
+            <i class="flag-jpn"></i>
+            <i class="flag-kor"></i>
+            <i class="flag-mex"></i>
+            <i class="flag-ned"></i>
+            <i class="flag-nga"></i>
+            <i class="flag-por"></i>
+            <i class="flag-rus"></i>
+            <i class="flag-sui"></i>
+            <i class="flag-uru"></i>
+            <i class="flag-usa"></i>
+            <div class="clearfix"></div>
             <input class="pull-right col-md-4" type="text" ng-model="name" />
             <label class="pull-right">Namn:</label>
             <h1>Fotbolls-VM 2014</h1>
-            <p>1 poäng för varje rätt svar. Gissa slutgiltiga vinnare för 6 extra poäng.</p>
-            <p>Insats: 100 :-. 1:an får 50% av insatserna, 2:a plats får 30% och 3:an får 20%.</p>
+            <p>1 poäng för varje rätt svar. Gissa slutgiltig vinnare för 6 extra poäng.</p>
+            <p>Insats: 100 :-. 1:a plats får 50% av insatserna, 2:a plats får 30% och 3:e plats får 20%.</p>
             <span>
               <i class="glyphicon glyphicon-info-sign red"></i>
               Tiden går ut {{deadline}}, {{timeLeft}}.
@@ -153,9 +153,7 @@
             </div>
         </div>
     </div>
-    <script type="text/javascript"
-            src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js">
-    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script>
     <script src="http://cdn.jsdelivr.net/json3/3.3.1/json3.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.6.0/moment.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.6.0/lang/sv.js"></script>
