--- a/index.html
+++ b/index.html
@@ -6,48 +6,9 @@
     <title>World Cup 2014</title>
     <link rel="stylesheet"
           type="text/css" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet"
+          type="text/css" href="stylesheets/main.css">
     <style>
-      [ng-cloak] { display: none; }
-      [class^="flag-"],
-      [class*=" flag-"] {
-          background: url(csg-538f7ae988d6d.png) no-repeat top left;
-          display: inline-block;
-          vertical-align: middle;
-          margin-right: 4px;
-      }
-      .flag-alg{ background-position: 0 0; width: 34px; height: 22px; } 
-      .flag-arg{ background-position: 0 -72px; width: 34px; height: 22px; } 
-      .flag-aus{ background-position: 0 -144px; width: 34px; height: 22px; } 
-      .flag-bel{ background-position: 0 -216px; width: 34px; height: 22px; } 
-      .flag-bih{ background-position: 0 -288px; width: 34px; height: 22px; } 
-      .flag-bra{ background-position: 0 -360px; width: 34px; height: 22px; } 
-      .flag-chi{ background-position: 0 -432px; width: 34px; height: 22px; } 
-      .flag-civ{ background-position: 0 -504px; width: 34px; height: 22px; } 
-      .flag-cmr{ background-position: 0 -576px; width: 34px; height: 22px; } 
-      .flag-col{ background-position: 0 -648px; width: 34px; height: 22px; } 
-      .flag-crc{ background-position: 0 -720px; width: 34px; height: 22px; } 
-      .flag-cro{ background-position: 0 -792px; width: 34px; height: 22px; } 
-      .flag-ecu{ background-position: 0 -864px; width: 34px; height: 22px; } 
-      .flag-eng{ background-position: 0 -936px; width: 34px; height: 22px; } 
-      .flag-esp{ background-position: 0 -1008px; width: 34px; height: 22px; } 
-      .flag-fra{ background-position: 0 -1080px; width: 34px; height: 22px; } 
-      .flag-ger{ background-position: 0 -1152px; width: 34px; height: 22px; } 
-      .flag-gha{ background-position: 0 -1224px; width: 34px; height: 22px; } 
-      .flag-gre{ background-position: 0 -1296px; width: 34px; height: 22px; } 
-      .flag-hon{ background-position: 0 -1368px; width: 34px; height: 22px; } 
-      .flag-irn{ background-position: 0 -1440px; width: 34px; height: 22px; } 
-      .flag-ita{ background-position: 0 -1512px; width: 34px; height: 22px; } 
-      .flag-jpn{ background-position: 0 -1584px; width: 34px; height: 22px; } 
-      .flag-kor{ background-position: 0 -1656px; width: 34px; height: 22px; } 
-      .flag-mex{ background-position: 0 -1728px; width: 34px; height: 22px; } 
-      .flag-ned{ background-position: 0 -1800px; width: 34px; height: 22px; } 
-      .flag-nga{ background-position: 0 -1872px; width: 34px; height: 22px; } 
-      .flag-por{ background-position: 0 -1944px; width: 34px; height: 22px; } 
-      .flag-rus{ background-position: -84px 0; width: 34px; height: 22px; } 
-      .flag-sui{ background-position: -84px -72px; width: 34px; height: 22px; } 
-      .flag-uru{ background-position: -84px -144px; width: 34px; height: 22px; } 
-      .flag-usa{ background-position: -84px -216px; width: 34px; height: 22px; } 
-      .red { color: red; }
     </style>
 </head>
 <body ng-app="App">
